--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -1,6 +1,9 @@
 .about {
   position: relative;
-  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 150px;
 }
 
 .about__container {
