--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -4,6 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  height: 170vh;
 
   @include super-wide {
     display: none;
@@ -66,7 +67,7 @@
     display: block;
     .parallax__image {
       right: 0;
-      bottom: 300px;
+      bottom: 0;
     }
   }
   &:nth-child(7) {
@@ -74,7 +75,7 @@
     .parallax__image {
       left: 0;
       width: 100%;
-      bottom: 0;
+      bottom: -100px;
     }
   }
 }
