--- a/src/styles/blocks/values.pcss
+++ b/src/styles/blocks/values.pcss
@@ -4,6 +4,9 @@
   background-size:  50% auto;
   background-position: -10% 40%;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   @include desktop {
     background-size:  60% auto;
