Переключение работ частично

--- a/src/index.pug
+++ b/src/index.pug
@@ -93,6 +93,19 @@ html(lang="ru")
             .works__content
               #slider-component
         .bottom-section
+          section.parallax.parallax__budda
+            .parallax__item(data-speed="0.40")
+              +image('parallax/budda/Sky.jpg', 'parallax__image')
+            .parallax__item(data-speed="0.25")
+              +image('parallax/budda/Mountain.png', 'parallax__image')
+            .parallax__item(data-speed="0.35")
+              +image('parallax/budda/Budda.png', 'parallax__image')
+            .parallax__item(data-speed="0.38")
+              +image('parallax/budda/Cloud1.png', 'parallax__image')
+            .parallax__item(data-speed="0.45")
+              +image('parallax/budda/Cloud2.png', 'parallax__image')
+            .parallax__item(data-speed="0.48")
+              +image('parallax/budda/Cloud3.png', 'parallax__image')
           section(id="sec5").reviews-section
             #reviews-component
           section(id="sec6").form-section
