--- a/src/styles/blocks/bottom-section.pcss
+++ b/src/styles/blocks/bottom-section.pcss
@@ -1,11 +1,11 @@
 .bottom-section {
-  background: url('../images/bg/Budda.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 57% 50%;
+  position: relative;
   padding-bottom: 130px;
 
   @include desktop {
+    background: url('../images/bg/Budda.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: 65% 50%;
   }
 }
