--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 180px 100px;
+  position: relative;
 
   @include desktop {
     padding: 180px 30px;
