--- a/src/styles/blocks/bottom-section.pcss
+++ b/src/styles/blocks/bottom-section.pcss
@@ -2,7 +2,7 @@
   position: relative;
   padding-bottom: 130px;
 
-  @include desktop {
+  @include tablets {
     background: url('../images/bg/Budda.jpg');
     background-size: cover;
     background-repeat: no-repeat;
