--- a/src/styles/blocks/budda.pcss
+++ b/src/styles/blocks/budda.pcss
@@ -4,7 +4,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 80%;
 
   @include super-wide {
     display: none;
@@ -23,48 +22,50 @@
   bottom: 0;
   display: none;
   will-change: transform;
-  z-index: -100;
-
   &:nth-child(1) {
     display: block;
     .parallax__image {
-      top: 0;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
     }
   }
-  
   &:nth-child(2) {
     display: block;
     .parallax__image {
-      bottom: 0;
+      height: 55%;
+      width: 100%;
+      top: 110%;
+      right: 0;
+      left: 0;
     }
   }
   &:nth-child(3) {
     display: block;
     .parallax__image {
       left: 70%;
-      top: 20%;
+      top: 155%;
     }
   }
   &:nth-child(4) {
     display: block;
     .parallax__image {
-      top: auto;
-      bottom: 10%;
-      height: 50%;
+      left: 0;
+      top: 40%;
     }
   }
   &:nth-child(5) {
     display: block;
     .parallax__image {
-      bottom: 0;
-      right: 0;
+      left: 0;
+      top: 40%;
     }
   }
   &:nth-child(6) {
     display: block;
     .parallax__image {
-      bottom: 0;
       right: 0;
+      bottom: 0;
     }
   }
 }
