--- a/src/styles/blocks/values.pcss
+++ b/src/styles/blocks/values.pcss
@@ -85,6 +85,6 @@
     background-image: url('../images/content/bag.png');
     background-repeat: no-repeat;
     background-size:  50% auto;
-    background-position: 60% 0;
+    background-position: 60% 30%;
   }
 }
