--- a/src/styles/blocks/welcome-section.pcss
+++ b/src/styles/blocks/welcome-section.pcss
@@ -1,5 +1,6 @@
 .welcome-section {
   position: relative;
+  min-height: 160vh;
 
    @include super-wide {
     background: url('~images/bg/hero_wide.jpg') center top no-repeat / cover;
