--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -4,6 +4,10 @@
   justify-content: center;
   align-items: center;
   padding-top: 150px;
+
+  @include phones {
+    padding-bottom: 50px;
+  }
 }
 
 .about__container {
@@ -70,6 +74,10 @@
   border-radius: 50%;
   max-width: 200px;
   max-height: 200px;
+
+  @include phones {
+    height: auto;
+  }
 }
 
 .user__data-cell {
