--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -4,7 +4,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 180vh;
+  height: 107.5%;
+  overflow: hidden;
 
   @include super-wide {
     display: none;
@@ -75,7 +76,7 @@
     .parallax__image {
       left: 0;
       width: 100%;
-      bottom: -100px;
+      bottom: 0;
     }
   }
 }
