--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -14,11 +14,17 @@
   &_under {
     stroke: #eaeaea;
     stroke-width: 5px;
+    @include phones {
+      stroke-width: 3px;
+    }
   }
   &_above {
     stroke-width: 12px;
     stroke-dasharray: 251;
     stroke-dashoffset: 100;
+    @include phones {
+      stroke-width: 9px;
+    }
   }
 }
 
