--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -50,9 +50,9 @@
   height: 550px;
 
   @include tablets {
-    margin-bottom: 105px;
-    width: 86%;
+    width: 95%;
   }
+
   &:before {
     content: attr(data-slide);
     position: absolute;
@@ -64,6 +64,7 @@
     font-weight: 800;
     margin-left: -8%;
     color: rgba($text-color, .05);
+    z-index: -100;
     @include desktop {
       top: 0;
       transform: translateY(-15%);
@@ -72,7 +73,7 @@
   }
   @include phones {
     width: 100%;
-    margin-bottom: 60px;
+    margin-bottom: 0;
     &:before {
       display: none;
     }
@@ -85,7 +86,7 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 100%; 
+  height: auto; 
 }
 
 .works-slider__fullpic-container {
@@ -93,7 +94,7 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 100%; 
+  height: auto; 
 }
 
 .works-slider__fullpic {
@@ -114,7 +115,6 @@
 }
 
 .works-slider__thumb-item {
-  height: 100px;
   transition: .2s;
   &.active,
   &:hover {
@@ -192,12 +192,14 @@
     align-items: center;
     padding: 0 18%;
     text-align: center;
+    margin-top: -10%;
   }
 
   @include phones {
     padding: 0 5%;
     text-align: left;
     align-items: flex-start;
+    margin-top: -45%;
   }
 }
 
@@ -215,6 +217,7 @@
 .works-slider__tag-item {
   margin-right: 15px;
   margin-bottom: 15px;
+  z-index: 100;
 }
 
 .works-slider__title {
