--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -13,7 +13,7 @@ script(type="text/x-template")#reviews
           .quote
             .quote__text {{review.text}}
             .quote__author
-              .user.user--horizontal
+              .user--horizontal
                 .user__avatar
                   img(:src="review.pic" alt="photo").user__avatar-pic
                 .user__data
