Добавил ховер в навигацию и форму

--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -118,7 +118,7 @@
   transition: .2s;
   &.active,
   &:hover {
-    outline: 3px solid #f29400;
+    outline: 3px solid #5500f2;
   }
 }
 
@@ -181,6 +181,10 @@
       }
     }
   }
+}
+
+.works-slider__btn:hover {
+  background: #5500f2;
 }
 
 .works-slider__data {
