--- a/src/styles/blocks/nav.pcss
+++ b/src/styles/blocks/nav.pcss
@@ -19,12 +19,24 @@
   text-decoration: none;
 
   &:hover {
-    text-decoration: underline;
+    color: #8e6bf6;
+    padding-bottom: 20px;
+    border-bottom: 3px solid #8e6bf6;
   }
 }
 
 .nav--color-white {
   margin-bottom: 60px;
+
+  .nav__link {
+    text-decoration: none;
+
+    &:hover {
+      color: #ff9a00;
+      padding-bottom: 20px;
+      border-bottom: 3px solid #ff9a00;
+  }
+}
 
   @include tablets {
       margin-bottom: 0;
