--- a/src/styles/blocks/nav.pcss
+++ b/src/styles/blocks/nav.pcss
@@ -17,24 +17,45 @@
 
 .nav__link {
   text-decoration: none;
+  position: relative;
+  transition: .3s;
 
   &:hover {
     color: #8e6bf6;
-    padding-bottom: 20px;
+    transition: .3s;
+  }
+
+  &:hover:after {
+    content: '';
+    position: absolute;
+    top: 180%;
+    left: -20%;
+    right: -20%;
     border-bottom: 3px solid #8e6bf6;
+    transition: .3s;
   }
 }
 
 .nav--color-white {
   margin-bottom: 60px;
-
+  position: relative;
   .nav__link {
     text-decoration: none;
+    transition: .3s;
 
     &:hover {
-      color: #ff9a00;
-      padding-bottom: 20px;
-      border-bottom: 3px solid #ff9a00;
+    color: #ff9a00;
+    transition: .3s;
+  }
+
+  &:hover:after {
+    content: '';
+    position: absolute;
+    top: 180%;
+    left: -20%;
+    right: -20%;
+    border-bottom: 3px solid #ff9a00;
+    transition: .3s;
   }
 }
 
