--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -47,6 +47,7 @@
   border-radius: 50%;
   position: relative;
   background: transparent;
+  transition: .3s;
 
   &:focus {
     outline: none;
@@ -54,7 +55,12 @@
 
   &:hover {
     background: #5500f2;
+    border: 1px solid #fff;
     transition: .3s;
+
+    .reviews__slider-prev-icon, .reviews__slider-next-icon {
+      fill: #fff;
+    }
   }
 }
 
