--- a/src/styles/blocks/nav.pcss
+++ b/src/styles/blocks/nav.pcss
@@ -75,3 +75,20 @@
     }
   }
 }
+
+.nav--popup {
+  position: absolute;
+  top: 15%;
+  left: 20%;
+  font-weight: 700;
+  color: #414c63;
+
+  .nav__list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav__item {
+    margin-bottom: 30px;
+  }
+}
