--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -1,3 +1,15 @@
+.reviews {
+  padding-right: 25%;
+  
+  @include desktop {
+    padding-right: 10%;
+  }
+
+  @include tablets {
+    padding-right: 0;
+  }
+}
+
 .reviews-section {
   display: flex;
   flex-direction: column;
