--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -4,14 +4,12 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 107.5%;
-  overflow: hidden;
 
   @include super-wide {
     display: none;
   }
 
-  @include phones {
+  @include tablets {
     display: none;
   }
 }
@@ -29,24 +27,23 @@
     .parallax__image {
       object-fit: cover;
       width: 100%;
-      height: 80%;
+      height: 100%;
     }
   }
   &:nth-child(2) {
     display: block;
     .parallax__image {
-      height: 50%;
-      width: 100%;
-      top: 300px;
+      top: 260px;
       right: 0;
-      left: 0;
+      height: 70%;
+      width: 100%;
     }
   }
   &:nth-child(3) {
     display: block;
     .parallax__image {
-      left: 45%;
-      top: 415px;
+      left: 50%;
+      top: 450px;
       transform: translateX(367px);
     }
   }
@@ -54,7 +51,8 @@
     display: block;
     .parallax__image {
       left: 0;
-      top: 600px;
+      top: 500px;
+      height: 50%;
     }
   }
   &:nth-child(5) {
@@ -62,6 +60,7 @@
     .parallax__image {
       left: 0;
       top: 510px;
+      height: 50%;
     }
   }
   &:nth-child(6) {
