--- a/src/styles/blocks/triangles.pcss
+++ b/src/styles/blocks/triangles.pcss
@@ -4,7 +4,7 @@
   z-index: 100;
 
   &_top {
-    margin-top: 0;
+    margin-top: -7.5rem;
     height: 120px;
 
     @include phones {
@@ -17,7 +17,7 @@
     margin-bottom: -90px;
     height: 90px;
 
-    @include phones {
+    @include tablets {
       height: 40px;
       margin-bottom: -40px;
     }
