--- a/src/styles/blocks/welcome-section.pcss
+++ b/src/styles/blocks/welcome-section.pcss
@@ -1,6 +1,7 @@
 .welcome-section {
   position: relative;
   min-height: 160vh;
+  padding-bottom: 100px;
 
    @include super-wide {
     background: url('~images/bg/hero_wide.jpg') center top no-repeat / cover;
