--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -35,7 +35,7 @@ script(type="text/x-template")#slider-thumbs
     li.works-slider__thumb-item(
       v-for="(work, index) in works" :key="work.id"
       :class="{active: currentWork.id === work.id }"
-      @click.prevent="$emit('select', index)"
+      @click.prevent="$emit('select', work.id)"
     )
       a(href="#").works-slider__thumb-link
         img(:src="work.photo" alt="").works-slider__thumb
