--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -27,8 +27,8 @@ script(type="text/x-template")#slider-display
 
 script(type="text/x-template")#slider-btns
   .works-slider__buttons
-    a(href="#" @click.prevent="$emit('slide', 'next')").works-slider__btn.works-slider__btn_next
-    a(href="#" @click.prevent="$emit('slide', 'prev')").works-slider__btn.works-slider__btn_prev
+    a(href="" @click.prevent="$emit('slide', 'next')").works-slider__btn.works-slider__btn_next
+    a(href="" @click.prevent="$emit('slide', 'prev')").works-slider__btn.works-slider__btn_prev
 
 script(type="text/x-template")#slider-thumbs
   ul.works-slider__thumbs
