--- a/src/styles/admin/admin-base.pcss
+++ b/src/styles/admin/admin-base.pcss
@@ -24,3 +24,56 @@
   visibility: hidden;
   transition: .3s;
 }
+
+.container__admin-block-title {
+  display: flex;
+  flex-direction: row;
+}
+
+.admin-block {
+  background: url('../images/bg/admin_bg.jpg') center center no-repeat;
+}
+
+.admin-block-title {
+  display: flex;
+  font-size: 21px;
+  font-weight: 700;
+  padding: 45px 0;
+}
+
+.admin-btn {
+  width: 16px;
+  height: 16px;
+  background: transparent;
+}
+
+.apply__btn {
+  background: url('../images/icons/tick.png') center center no-repeat;
+  margin-right: 16px;
+
+  &--nomargin {
+    margin-right: 0;
+  }
+}
+
+.close__btn {
+  background: url('../images/icons/cross.png') center center no-repeat;
+}
+
+.edit__btn {
+  background: url('../images/icons/pencil.png') center center no-repeat;
+  opacity: 0.5;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.remove__btn {
+  background: url('../images/icons/trash.png') center center no-repeat;
+  opacity: 0.5;
+
+  &:hover {
+    opacity: 1;
+  }
+}
