--- a/src/styles/blocks/nav.pcss
+++ b/src/styles/blocks/nav.pcss
@@ -92,3 +92,24 @@
     margin-bottom: 30px;
   }
 }
+
+.admin__nav {
+  .nav__link {
+    font-weight: 600;
+
+    &:hover {
+    color: #383bce;
+    transition: .3s;
+  }
+
+  &:hover:after {
+    content: '';
+    position: absolute;
+    top: 200%;
+    left: -30%;
+    right: -30%;
+    border-bottom: 3px solid #383bce;
+    transition: .3s;
+  }
+  }
+}
