--- a/src/styles/admin/admin-about.pcss
+++ b/src/styles/admin/admin-about.pcss
@@ -1,5 +1,10 @@
 .admin-block-name--about {
   margin-right: 50px;
+
+  @include phones {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
 
 .admin-about-btn {
@@ -26,6 +31,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  @include tablets {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .admin-about__item {
@@ -39,6 +49,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @include tablets {
+    width: 70%;
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+
+  @include phones {
+    width: 100%;
+  }
 }
 
 .about-block__title {
@@ -79,6 +99,7 @@
   width: 20%;
   padding: 15px;
   margin-right: 25px;
+  font-size: 14px;
 }
 
 .admin-add-btn {
