--- a/src/styles/admin/admin-reviews.pcss
+++ b/src/styles/admin/admin-reviews.pcss
@@ -21,11 +21,26 @@
   display: flex;
   padding: 40px 25px;
   background-color: #fff;
+
+  @include phones {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .edit-review__load {
   width: calc(25% - 20px);
-  margin-right: 20px; 
+  margin-right: 20px;
+
+  @include tablets {
+    width: calc(20% - 20px);
+  }
+
+  @include phones {
+    width: 80%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  } 
 }
 
 .edit-review__load-desc {
@@ -41,6 +56,11 @@
   border-radius: 50%;
   position: relative;
   margin-bottom: 20px;
+
+  @include tablets {
+    width: 150px;
+    height: 150px;
+  }
 
   &::after {
     content: url('../images/icons/man-user.png');
@@ -61,6 +81,15 @@
 
 .edit-review__desc {
   width: 65%;
+  
+  @include tablets {
+    width: 80%;
+  }
+
+  @include phones {
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
 .edit-review-form {
@@ -75,16 +104,28 @@
 
   &:first-child {
     display: flex;
+
+    @include phones {
+      flex-direction: column;
+    }
   }
 
   &--btns {
     display: flex;
     justify-content: flex-end;
+
+    @include phones {
+      justify-content: center;
+    }
   }
 }
 
 .edit-review-form__block{
   width: 100%;
+
+  @include phones {
+    margin-bottom: 25px;
+  }
 }
 
 .edit-review-form__text {
@@ -135,11 +176,20 @@
   width: calc(33% - 20px);
   margin-right: 20px;
   margin-bottom: 20px;
-  height: 380px;
+  min-height: 380px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 15px;
+
+  @include tablets {
+    width: calc(50% - 20px);
+  }
+
+  @include phones {
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
 .admin-review__item--add {
@@ -237,7 +287,7 @@
 }
 
 .admin-review__item-btn--delete:after {
-  content: url('../images/icons/Cross.png');
+  content: url('../images/icons/cross.png');
   display: inline-block;
   height: 17px;
   width: 17px;
