Пытаюсь исправить отображение админки на гитхаб

--- a/src/admin/index.pug
+++ b/src/admin/index.pug
@@ -6,5 +6,7 @@ html(lang="ru")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Portfolio | Chernyak | admin
   body
-    #app-root
+    .wrapper.admin-wrapper
+      .maincontent
+        #app-root
             
