--- a/src/styles/mixins.pcss
+++ b/src/styles/mixins.pcss
@@ -16,6 +16,18 @@
   }
 }
 
+@mixin bp-960() {
+  @media screen and (max-width: $bp-960) {
+    @content;
+  }
+}
+
+@mixin bp-870() {
+  @media screen and (max-width: $bp-870) {
+    @content;
+  }
+}
+
 @mixin tablets() {
   @media screen and (max-width: $bp-tablets) {
     @content;
