Добавил отзывы на главную страницу

--- a/src/index.pug
+++ b/src/index.pug
@@ -107,7 +107,7 @@ html(lang="ru")
             .parallax__item(data-speed="0")
               +image('parallax/budda/6.png', 'parallax__image')
           section(id="sec5").reviews-section
-            #reviews-component
+            reviews-component
           section(id="sec6").form-section
             .section-title.form-section__title Связаться со мной
             form.form(method="POST")
