last commit of week4

--- a/src/index.pug
+++ b/src/index.pug
@@ -114,12 +114,12 @@ html(lang="ru")
               .form__row
                 label.form__block.form__block--error(for="")
                   .form__text Введите ваше имя
-                  input(type="text" name="name" placeholder="Ковальчук Дмитрий" required).form__input
+                  input(type="text" name="name" placeholder="Черняк Игорь" required).form__input
                   .error.error__name
                   +icon('user', 'form__icon')
                 label.form__block.form__block--error(for="")
                   .form__text Введите ваш email
-                  input(type="email" name="email" placeholder="loftschool@study.com" required).form__input
+                  input(type="email" name="email" placeholder="igor.chernyak88@mail.ru" required).form__input
                   .error.error__mail
                   +icon('envelope', 'form__icon') 
               .form__row
@@ -136,6 +136,8 @@ html(lang="ru")
                 .copyright__text
                   .copyright__username Игорь Черняк
                   .copyright__desc Личный сайт веб-разработчика
+                  .footer__text-author
+                    a(href="mailto:igor.chernyak88@mail.ru") Отправить письмо
             .footer__data
               .footer__menu
                 nav.nav.nav--color-white
