--- a/src/index.pug
+++ b/src/index.pug
@@ -53,8 +53,8 @@ html(lang="ru")
                     table.user__data-table
                       - 
                         var data = [
-                          ['Проживаю:', 'Зеленоград'],
-                          ['Возраст:', '30 лет'],
+                          ['Проживаю:', 'Москва'],
+                          ['Возраст:', '31 год'],
                           ['Родился:', '11 ноября 1988'],
                         ]
                       each row in data
@@ -67,7 +67,7 @@ html(lang="ru")
                 .about__desc 
                   p Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
                 .about__ps 
-                  p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+                  p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
         .triangles.triangles_top
           svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
             polygon(points="0,0 0,100 1000,100")
@@ -78,7 +78,7 @@ html(lang="ru")
             .values__title
               h2.section-title.values__title-text.section-title--small Чем я могу быть полезен вам
               article.values__desc
-                p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+                p Хорошие знания HTML, pug, CSS, SCSS, БЭМ, flexbox, адаптивной вёрстки. Работаю с Git, Photoshop, Avocode, VSCode, Atom. Средний уровень JavaScript. Основы Ajax, Vue.js, PHP. Опыт работы со сборками gulp, webpack, пакетными менеджерами npm, yarn.
             .values__widget
               #skills-component
             .values__widget-tablets
@@ -132,7 +132,7 @@ html(lang="ru")
           .container.footer__container
             .footer__copyright
               .copyright
-                .copyright__year &copy;2019
+                .copyright__year &copy;2020
                 .copyright__text
                   .copyright__username Игорь Черняк
                   .copyright__desc Личный сайт веб-разработчика
