--- a/src/styles/admin/admin-header.pcss
+++ b/src/styles/admin/admin-header.pcss
@@ -30,7 +30,7 @@
   height: 45px;
   overflow: hidden;
   flex-shrink: 0;
-  border-radius: 50%;
+  border-radius: 0;
 }
 
 .admin-user__avatar-pic {
